--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next/font": "^14.2.15",
     "next": "14.2.15",
     "nextjs-toploader": "^3.7.15",
     "react": "^18",
